# Pathfinding

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  GameMap.hpp  main.cpp
include/pathfinding/: Coordinate.hpp  Heuristic.hpp  Path.hpp  PathFinder.hpp  TileBasedMap.hpp
include/pathfinding/algorithm/: AStar.hpp
include/pathfinding/heuristics/: ClosestHeuristic.hpp  ClosestSquaredHeuristic.hpp  ManhattanHeuristic.hpp
